--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"name": "credito",
-	"version": "6",
-	"description": "Revisa tus creditos disponibles de Apretaste y Transfiere crédito a otros usuarios.",
+	"version": 7,
+	"description": "Revisa tu crédito en Apretaste, tus transacciones, y transfiere crédito a otros usuarios",
 	"category": "negocios",
 	"creator": "salvi@apretaste.org",
 	"listed": true
