--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
 	"name": "credito",
-	"version": 11,
 	"description": "Revisa tu crédito en Apretaste, tus transacciones, y transfiere crédito a otros usuarios",
 	"category": "negocios",
 	"creator": "salvi@apretaste.org",
-	"listed": true
+	"listed": true,
+	"guest": true,
+	"caption": "Credito"
 }
