fix transfer button

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
 	"name": "credito",
+	"caption": "Crédito",
 	"description": "Revisa tu crédito en Apretaste, tus transacciones, y transfiere crédito a otros usuarios",
 	"category": "negocios",
 	"creator": "salvi@apretaste.org",
 	"listed": true,
-	"guest": true,
-	"caption": "Credito"
+	"guest": false
 }
